noinst_LIBRARIES	= libnxml.a
libnxml_a_SOURCES 	= nxml_download.c nxml_easy.c nxml_entity.c nxml_free.c nxml_namespace.c nxml_string.c nxml_utf.c nxml_dtd.c \
       			  nxml_edit.c nxml_error.c nxml_init.c nxml_parser.c nxml_tools.c nxml_write.c
include_HEADERS 	= nxml.h
noinst_HEADERS		= nxml_internal.h
INCLUDES 		= -I../curl/

EXTRA_DIST = 

include $(top_srcdir)/autotools/rules.mk


