pkglib_LTLIBRARIES	= bahamut.la client.la hybrid7.la ircup10.la liquid.la \
						mystic.la neoircd.la quantum.la ultimate2.la \
						ultimate3.la unreal31.la unreal32.la viagra.la
bahamut_la_SOURCES = bahamut.c bahamut.h
client_la_SOURCES = client.c client.h
hybrid7_la_SOURCES = hybrid7.c hybrid7.h
ircup10_la_SOURCES = ircup10.c ircup10.h
liquid_la_SOURCES = liquid.c liquid.h
mystic_la_SOURCES = mystic.c mystic.h
neoircd_la_SOURCES = neoircd.c neoircd.h
quantum_la_SOURCES = quantum.c quantum.h
ultimate2_la_SOURCES = ultimate2.c ultimate2.h
ultimate3_la_SOURCES = ultimate3.c ultimate3.h
unreal31_la_SOURCES = unreal31.c unreal31.h
unreal32_la_SOURCES = unreal32.c unreal32.h
viagra_la_SOURCES = viagra.c viagra.h
AM_LDFLAGS	= -module -avoid-version -no-undefined
AM_CFLAGS		= -I.. -I../../include -I../pcre -I../adns
include $(top_srcdir)/autotools/rules.mk